WIP: Change to aspire

--- a/ChatServiceWebApi/Properties/launchSettings.json
+++ b/ChatServiceWebApi/Properties/launchSettings.json
@@ -1,12 +1,22 @@
 {
   "profiles": {
-    "ChatServiceWebApi": {
+    "https": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:63279;http://localhost:63280"
+      "applicationUrl": "https://localhost:3279;http://localhost:3280"
+    },
+    "http": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:3280"
     }
   }
 }
