--- a/Search/Search.csproj
+++ b/Search/Search.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Search</RootNamespace>
@@ -26,9 +26,9 @@
   </ItemGroup>-->
   <ItemGroup>
     <PackageReference Include="Humanizer" Version="2.14.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Search.ServiceDefaults\Search.ServiceDefaults.csproj" />
     <ProjectReference Include="..\VectorSearchAiAssistant.Service\VectorSearchAiAssistant.Service.csproj" />
   </ItemGroup>
   <ItemGroup>
